--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-web": "~0.19.6",
-    "@react-native-picker/picker": "2.4.10"
+    "@react-native-picker/picker": "2.4.10",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
